// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Should render a check icon if isChecked is set to true 1`] = `
<svg
  aria-hidden={true}
  className="jsx-1131348929 kirk-icon"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    className="jsx-1131348929"
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
  <circle
    className="jsx-1131348929 inner"
    cx="33"
    cy="33"
    fill="#00AFF5"
    r="18"
  />
</svg>
`;

exports[`Checkbox Should render a loader if isLoading and isChecked are set to true 1`] = `
<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="jsx-1131348929 kirk-icon spinning"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-1131348929"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`Checkbox Should render a loader if isLoading is set to true 1`] = `
<div
  className="jsx-2765694959 kirk-loader"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
>
  <svg
    aria-hidden={true}
    className="jsx-1131348929 kirk-icon spinning"
    height={24}
    viewBox="0 0 66 66"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    
    <circle
      className="jsx-1131348929"
      cx="33"
      cy="33"
      fill="none"
      r="30"
      stroke="#5DD167"
    />
  </svg>
</div>
`;

exports[`Checkbox Should render an empty circle by default 1`] = `
<svg
  aria-hidden={true}
  className="jsx-1131348929 kirk-icon"
  height={24}
  viewBox="0 0 66 66"
  width={24}
  xmlns="http://www.w3.org/2000/svg"
>
  
  <circle
    className="jsx-1131348929"
    cx="33"
    cy="33"
    fill="none"
    r="30"
    stroke="#00AFF5"
  />
</svg>
`;
